get the html file saved function

--- a/MarkdownWeb/markdown.html
+++ b/MarkdownWeb/markdown.html
@@ -54,6 +54,7 @@ public class Test{
 	<div id="footer">
 		<span id="byline">
 			<b><a href="http://www.chensihang.com/materials/markdown.pdf">Download cheat sheet</a></b> copyright &copy; 沉思·航 2015
+			<span><button id="savepdf">存为HTML</button></span>
 	
 			<script type="text/javascript">
 			/* <![CDATA[ */
@@ -95,6 +96,15 @@ public class Test{
                 $("#inputPane").val(''); 
             });
             $("#wordcount").text(getwordcount());
+            $("#savepdf").click(function(){
+                $.post("savepdf.php",
+                {
+                    code:htmlcode
+                },
+                function(data,status){
+                    alert("Data: " + data + "\nStatus: " + status);
+                });
+            });
             $(document).delegate('#inputPane', 'keydown', function(e) {
                 var keyCode = e.keyCode || e.which;
                 if (keyCode == 9) {
