fix some issues

--- a/MarkdownWeb/res.html
+++ b/MarkdownWeb/res.html
@@ -13,3 +13,10 @@
     }
 }
 </pre>
+
+<h3 id="helloworlder">Hello, worlder</h3>
+
+<ul>
+<li>Hello, world
+<ul><li>Hello, worlder   </li></ul></li>
+</ul>
